[package]
name = "cave_crawler"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AccordingtoProphecy/CS-361-Project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3